<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBackGroundColor"
    tools:context=".CategoriesMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-108dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="255dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/welcomeText"
                android:textColor="@color/uiTextColor"
                android:textSize="@dimen/welcomeTextSize" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <Button
            android:id="@+id/btnTech"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:background="@color/ButtonBGColor"
            android:text="@string/techBtn"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/buttonTextSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:background="@color/ButtonBGColor"
            android:text="@string/histBtn"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonTextSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <Button
            android:id="@+id/btnGeography"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:background="@color/ButtonBGColor"
            android:text="@string/geogBtn"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonTextSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <Button
            android:id="@+id/btnQuit"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@color/ButtonBGColor"
            android:text="@string/quit"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonTextSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>